--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 html {
-  background: url(../img/OldCarSalesman.jpg) no-repeat center center fixed;
+  background: url(../img/book-bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -13,6 +13,12 @@ body {
 h1 {
   font-size: 4rem;
   color: rgba(94, 108, 138, 1);
+  margin-top: 80px;
+}
+h3 {
+  font-size: 2.75rem;
+  color: rgba(94, 108, 138, 1);
+  margin: 0 0 30px 0;
 }
 a {
   color: #c2d5e6;
@@ -33,7 +39,9 @@ a.home-btn:hover {
 }
 
 .flex-container {
-  height: 540px;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 300px 0 0 0;
+  padding: 200px 25px;
   display: -webkit-flex;
   display: flex;
   -webkit-align-items: center;
@@ -45,7 +53,7 @@ a.home-btn:hover {
   flex-wrap: wrap;
 }
 
-.flex-item-buttons {
+.flex-item {
   webkit-flex: 1;
   flex: 1;
   min-width: 450px;
