--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 html {
-  background: url(../img/book-bg.jpg) no-repeat center center fixed;
+  background: url(../img/skull-bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -39,7 +39,7 @@ a.home-btn:hover {
 }
 
 .flex-container {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.9);
   margin: 300px 0 0 0;
   padding: 200px 25px;
   display: -webkit-flex;
