fix bug in route to create mulitple definitions, update form html for adding new definitions, update html and css for layout template

--- a/views/definitions.erb
+++ b/views/definitions.erb
@@ -1,6 +1,5 @@
-<h1>Definitions</h1>
+<h1 class="flex-header">Here are the definitions for this <em>werd:</em> </h1>
 
-<h3>Here are the defintions for this <em>werd:</em> </h3>
 <ul>
   <% @definitions.each do |definition| %>
   <li><a href='/definitions/<%= definition.id() %>'><%= definition.description() %>
