--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,11 +3,13 @@
 <head>
   <title>Dissapointing Slang</title>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <div class="container">
-    <%= yield %>
+    <div class="flex-container">
+      <%= yield %>
+    </div>
   </div>
 </body>
 </html>
