--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,6 +37,15 @@ a.home-btn:hover {
   background-color: rgba(70, 50, 60, 0.95);
   color: #c2d5e6;
 }
+ul {
+  font-size: 2.5rem;
+  list-style-type: none;
+  padding-left:0;
+}
+
+ul li a {
+  color: rgba(94, 108, 138, 1);
+}
 
 .flex-container {
   background-color: rgba(255, 255, 255, 0.9);
