--- a/views/word.erb
+++ b/views/word.erb
@@ -1,10 +1,13 @@
-<h3>Here are all the definitions for this <em>werd</em></h3>
+<h3 class="flex-header">Here are all the definitions for this <em>werd</em></h3>
 
 <ul>
   <% @word.definitions().each do |definition| %>
   <li><a href="/definition/<%= car.id() %>"><%= definition.make() %></a></li>
   <% end %>
 </ul>
-
-<a href="/words/<%= @word.id %>/definitions/new">Add a new definition</a>
-<a href="/">Return to Main Page</a>
+<div class="flex-item">
+  <a class="home-btn" href="/words/<%= @word.id %>/definitions/new">Add a new definition</a>
+</div>
+<div class="flex-item">
+  <a class="home-btn" href="/">Return to Main Page</a>
+</div>
