--- a/views/words_form.erb
+++ b/views/words_form.erb
@@ -1,9 +1,12 @@
-<h1>Add <em>Werd</em></h1>
+<h1 class="flex-header">Add <em>Werdz</em></h1>
 
-<p>Add a new <em>werd</em> with the form below:</p>
+<div class="flex-item">
+  <h3>Add your favorite Djanky Slang <em>werdz</em></h3>
+</div>
 
-<form action="/words" method="post">
-  <label for="name">Word name:</label>
-  <input id="name" name="name" type="text">
-  <button type="submit">Add Word</button>
-</form>
+<div class="flex-item">
+  <form action="/words" method="post">
+    <input id="name" name="name" type="text">
+    <button type="submit">Add Word</button>
+  </form>
+</div>
