--- a/views/words.erb
+++ b/views/words.erb
@@ -1,4 +1,4 @@
-<h1 class="flex-header"><em>Werds</em></h1>
+<h1 class="flex-header"><em>Werds</em>List</h1>
 
 <div class="flex-item">
   <ul>
@@ -7,3 +7,7 @@
     <% end %>
   </ul>
 </div>
+<div class="flex-item">
+  <h3>I'm bored take me back</h3>
+  <a class="home-btn" href='/'>Home</a>
+<div>
