--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@ body {
 h1 {
   font-size: 4rem;
   color: rgba(94, 108, 138, 1);
-  margin-top: 80px;
+  margin: 80px 0;
 }
 h3 {
   font-size: 2.75rem;
@@ -33,9 +33,27 @@ a.home-btn {
   padding:20px 40px;
   background-color: rgb(70,50,60)
 }
+.home-box {
+  font-size: 4rem;
+  color: rgb(100,100,100);
+}
 a.home-btn:hover {
   background-color: rgba(70, 50, 60, 0.95);
   color: #c2d5e6;
+}
+.home-btn-small {
+  font-size: 2.75rem;
+  color: #c2d5e6;
+  padding:15px 40px 20px 40px;
+  background-color: rgb(70,50,60);
+  margin: auto;
+}
+.home-btn-small:hover {
+  background-color: rgba(70, 50, 60, 0.95);
+  color: #c2d5e6;
+}
+input {
+  height: 75px;
 }
 ul {
   font-size: 2.5rem;
@@ -53,12 +71,7 @@ ul li a {
   padding: 200px 25px;
   display: -webkit-flex;
   display: flex;
-  -webkit-align-items: center;
-          align-items: center;
-  -webkit-justify-content: center;
-          justify-content: center;
-  -webkit-align-content: center;
-          align-content: center;
+
   flex-wrap: wrap;
 }
 
