--- a/views/word.erb
+++ b/views/word.erb
@@ -1,15 +1,14 @@
-<h3 class="flex-header">Here are all the definitions for this <em>werd</em></h3>
-
-<ul>
+<h3 class="flex-header">Here are all the definitions for <em><%= @word.name() %></em></h3>
+<ul class="flex-header">
   <% @word.definitions().each do |definition| %>
-  <li><a href="/definition/<%= definition.id() %>"><%= definition.name() %></a></li>
+  <li>Definition: <%= definition.description() %> </li>
   <% end %>
 </ul>
 <div class="flex-item">
-  <h3>Don't see anything you're interested in?</h3>
-  <a class="home-btn" href="/words/<%= @word.id %>/definitions/new">Add a new definition</a>
+  <h3>Don't find this list satisfactory?</h3>
+  <a class="home-btn" href="/words/<%= @word.id() %>/definitions/new">Add a new definition</a>
 </div>
 <div class="flex-item">
-  <h3>Homesick?</h3>
-  <a class="home-btn" href="/">Return to Home Page</a>
+  <h3>Done here?</h3>
+  <a class="home-btn" href="/">Go back to yer bank</a>
 </div>
