--- a/views/words_form.erb
+++ b/views/words_form.erb
@@ -1,12 +1,9 @@
 <h1 class="flex-header">Add <em>Werdz</em></h1>
 
-<div class="flex-item">
+<div class="flex-header">
   <h3>Add your favorite Djanky Slang <em>werdz</em></h3>
-</div>
-
-<div class="flex-item">
   <form action="/words" method="post">
     <input id="name" name="name" type="text">
-    <button type="submit">Add Word</button>
+    <button class="home-btn-small" type="submit">Add Werd</button>
   </form>
 </div>
